BUGFIX: Aloha toolbar buttons overflow
The Aloha toobar buttons can be clicked outside their visible area,
due to their hidden text label overflow

--- a/TYPO3.Neos/Resources/Private/Styles/ContextBar/_AlohaMenu.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/ContextBar/_AlohaMenu.scss
@@ -140,6 +140,10 @@
 				width: $wideMargin;
 			}
 
+			.ui-button-text {
+				display: none;
+			}
+
 			.aloha-icon {
 				background: none;
 				-webkit-font-smoothing: antialiased;
